# HomeEnergyCenter

./: .gitignore  .pre-commit-config.yaml  CLAUDE.alex-vinckier.history.md  CLAUDE.alex-vinckier.md  CLAUDE.md  HomeEnergyCenter.ccgproj  WORKPLAN.md  alembic.ini  config.example.yaml  gui.py  main.py  project_specs.txt  pyproject.toml  setup-guide.html  tutorial.html
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_large_solar_w.py  0003_persist_prices_and_solar.py  0004_add_etrel_power_w.py  0005_add_ev_soc_pct.py
docs/: raspberry-pi-setup.md
src/energy_orchestrator/: orchestrator.py
src/energy_orchestrator/config/: __init__.py  loader.py  models.py
src/energy_orchestrator/data/: __init__.py  database.py  models.py  repositories.py  unit_of_work.py
src/energy_orchestrator/decision/: __init__.py  charger_control.py  context.py  engine.py  forecast.py  rules.py
src/energy_orchestrator/devices/: __init__.py  base.py  errors.py  etrel.py  homewizard.py  registry.py  solaredge.py  sonnen.py
src/energy_orchestrator/gui/: __init__.py  app.py  binding.py  probe.py
src/energy_orchestrator/monitoring/: __init__.py  logging_config.py
src/energy_orchestrator/prices/: __init__.py  base.py  cache.py  csv_provider.py  entsoe_provider.py  factory.py
src/energy_orchestrator/solar/: __init__.py  base.py  cache.py  forecast_solar_provider.py
src/energy_orchestrator/utils/: clock.py  geolocation.py
src/energy_orchestrator/vehicle/: __init__.py  base.py  cache.py  tronity.py
src/energy_orchestrator/web/: __init__.py  api.py  app.py  config_form.py  dependencies.py  override.py  views.py
src/energy_orchestrator/web/static/: dashboard.js  manifest.webmanifest  style.css  sw.js
src/energy_orchestrator/web/templates/: api.html  base.html  config.html  dashboard.html  debug.html  logs.html
tests/fixtures/: config_minimal.yaml
tests/integration/: test_data.py  test_web_app.py
tests/unit/: test_charger_control.py  test_config_loader.py  test_config_models.py  test_decision_engine.py  test_decision_forecast.py  test_decision_rules.py  test_devices_base.py  test_devices_etrel.py  test_devices_homewizard.py  test_devices_registry.py  test_devices_solaredge.py  test_devices_sonnen.py  test_gui_binding.py  test_gui_probe.py  test_monitoring_logging.py  test_orchestrator.py  test_prices_cache.py  test_prices_csv.py  test_prices_entsoe.py  test_prices_factory.py  test_smoke.py  test_solar_cache.py  test_utils_geolocation.py  test_vehicle_base.py  test_vehicle_cache.py  test_vehicle_tronity.py  test_web_override.py
